# powerlaw

./: CMakeLists.txt  README.md  powerlawCommon.cpp  powerlawFit.cpp
example_data/: README
